fix: Retrieving application reports by application tag periodically