@@ -3,25 +3,32 @@ package com.flink.platform.web.external;
 import com.flink.platform.web.model.ApplicationStatusReport;
 import com.flink.platform.web.util.ThreadUtil;
 import com.google.common.collect.Lists;
+import jakarta.annotation.Nonnull;
 import jakarta.annotation.PostConstruct;
 import jakarta.annotation.PreDestroy;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.lang3.RandomUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.fs.FileStatus;
 import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.LocalFileSystem;
 import org.apache.hadoop.fs.Path;
+import org.apache.hadoop.yarn.api.records.ApplicationReport;
 import org.apache.hadoop.yarn.client.api.YarnClient;
 import org.apache.hadoop.yarn.conf.YarnConfiguration;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.retry.annotation.Backoff;
+import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -29,6 +36,7 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ScheduledExecutorService;
 
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.apache.commons.lang3.ArrayUtils.EMPTY_STRING_ARRAY;
 
 /**
@@ -45,6 +53,7 @@ public class LocalHadoopService {
     private final String clusterIdPath;
 
     // tag -> ApplicationStatusReport.
+    @Getter
     private final Map<String, ApplicationStatusReport> runningApplications;
 
     private final ScheduledExecutorService reportRefreshExecutor;
@@ -59,7 +68,7 @@ public class LocalHadoopService {
     public LocalHadoopService(@Qualifier("clusterIdPath") String clusterIdPath) {
         this.clusterIdPath = clusterIdPath;
         this.runningApplications = new ConcurrentHashMap<>();
-        this.reportRefreshExecutor = ThreadUtil.newDaemonSingleScheduledExecutor("application-report-refresh");
+        this.reportRefreshExecutor = ThreadUtil.newDaemonSingleScheduledExecutor("yarn-application-report-refresh");
     }
 
     @SuppressWarnings("unused")
@@ -84,10 +93,15 @@ public class LocalHadoopService {
         }
 
         // start the application report refresh thread.
-        reportRefreshExecutor.execute(this::refreshReport);
+        reportRefreshExecutor.scheduleWithFixedDelay(this::refreshReport, RandomUtils.nextInt(10, 30), 40, SECONDS);
     }
 
-    public ApplicationStatusReport getApplicationReport(String applicationTag) throws Exception {
+    @Retryable(
+            retryFor = Exception.class,
+            maxAttempts = 4,
+            backoff = @Backoff(delay = 1500, multiplier = 2),
+            exceptionExpression = "@appRunnerChecker.shouldRetry(#root)")
+    public ApplicationStatusReport getStatusReportWithRetry(String applicationTag) throws Exception {
         if (StringUtils.isEmpty(applicationTag)) {
             log.warn("The application tag is empty.");
             return null;
@@ -95,9 +109,10 @@ public class LocalHadoopService {
 
         var statusReport = runningApplications.get(applicationTag);
         if (statusReport == null) {
-            var applications = yarnClient.getApplications(null, null, Set.of(applicationTag));
+            var applicationTags = Collections.singleton(applicationTag);
+            List<ApplicationReport> applications = getReportsWithRetry(applicationTags);
             if (CollectionUtils.isEmpty(applications)) {
-                log.warn("No application found with tag: {}", applicationTag);
+                log.warn("No application found for tag: {}", applicationTag);
                 return null;
             }
 
@@ -114,7 +129,7 @@ public class LocalHadoopService {
     }
 
     public void killApplication(String applicationTag) throws Exception {
-        var statusReport = getApplicationReport(applicationTag);
+        var statusReport = getStatusReportWithRetry(applicationTag);
         if (statusReport == null || statusReport.isTerminalState()) {
             log.warn("The application with tag: {} does not exist or is in terminal state.", applicationTag);
             return;
@@ -147,13 +162,22 @@ public class LocalHadoopService {
         }
     }
 
+    private List<ApplicationReport> getReportsWithRetry(@Nonnull Set<String> applicationTags) throws Exception {
+        var applications = yarnClient.getApplications(null, null, applicationTags);
+        if (CollectionUtils.isEmpty(applications)) {
+            ThreadUtil.sleep(1500);
+            applications = yarnClient.getApplications(null, null, applicationTags);
+        }
+        return applications;
+    }
+
     private void refreshReport() {
         String[] allTags = this.runningApplications.keySet().toArray(EMPTY_STRING_ARRAY);
         List<List<String>> partitions = Lists.partition(Arrays.asList(allTags), REQUEST_APP_REPORT_BATCH_SIZE);
         for (List<String> partition : partitions) {
             try {
                 var partitionTags = new HashSet<>(partition);
-                var partitionReports = yarnClient.getApplications(null, null, partitionTags);
+                var partitionReports = getReportsWithRetry(partitionTags);
                 for (var partitionReport : partitionReports) {
                     var applicationTags = partitionReport.getApplicationTags();
                     if (CollectionUtils.isEmpty(applicationTags)) {
